<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgrount_twoplayer"
    android:paddingBottom="70dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterplayernames"
        android:textColor="@color/BlueLight"
        android:textSize="35sp"
        android:fontFamily="@font/etna"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:background="@color/BlueBtn">
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/x"
            android:adjustViewBounds="true"/>
        <EditText
            android:id="@+id/NamePlayerOne"
            android:layout_width="match_parent"
            android:maxLength="7"
            android:fontFamily="@font/etna"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/playerone"
            android:singleLine="true"
            android:background="@color/BlueBtn"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@color/BlueBtn">
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/o"
            android:adjustViewBounds="true"/>
        <EditText
            android:id="@+id/NamePlayerTwo"
            android:layout_width="match_parent"
            android:maxLength="7"
            android:fontFamily="@font/etna"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/playertwo"
            android:singleLine="true"
            android:background="@color/BlueBtn"/>
    </LinearLayout>
    <Button
        android:id="@+id/StartGameTwoBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_press_true_of_false"
        android:fontFamily="@font/etna"
        android:textColor="@color/BlueLight"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/startgame"
        android:textSize="40sp"
        />
</LinearLayout>