<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrount_twoplayer"
    android:gravity="center">
    <!-- Complexity -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlueLight"
        android:textSize="45sp"
        android:fontFamily="@font/etna"
        android:shadowColor="@color/black"
        android:text="@string/complexity"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/leftComplexity"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/left"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/Complexity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/easy"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginBottom="2dp"/>
        <ImageView
            android:id="@+id/rightComplexity"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/right"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <!-- Sourсe-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlueLight"
        android:textSize="45sp"
        android:fontFamily="@font/etna"
        android:shadowColor="@color/black"
        android:text="@string/source"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/leftSourse"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/left"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/Sourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:textColor="@color/BlueLight"
            android:layout_marginBottom="2dp"/>
        <ImageView
            android:id="@+id/rightSourse"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/right"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <!-- Move -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlueLight"
        android:textSize="45sp"
        android:fontFamily="@font/etna"
        android:shadowColor="@color/black"
        android:text="@string/move"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/leftMove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/left"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/Move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/etna"
            android:text="@string/first"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginBottom="2dp"/>
        <ImageView
            android:id="@+id/rightMove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:src="@drawable/right"
            android:fontFamily="@font/etna"
            android:textSize="35sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/StartSingleGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/btn_press_true_of_false"
        android:fontFamily="@font/etna"
        android:textColor="@color/BlueLight"
        android:shadowColor="@color/black"
        android:shadowRadius="2"
        android:text="@string/startgame"
        android:textSize="35sp"
        android:layout_marginBottom="50dp"/>
</LinearLayout>