<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        android:paddingBottom="20dp"/>
    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_press_true_of_false"
            android:layout_weight="1"
            android:text="@string/single"
            android:textSize="52sp"
            android:textColor="@color/BlueText"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:fontFamily="@font/etna"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/Two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_press_true_of_false"
            android:fontFamily="@font/etna"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/two"
            android:textColor="@color/BlueText"
            android:textSize="52sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/Settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_press_true_of_false"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="52sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/BlueText"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:fontFamily="@font/etna"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/Exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_press_true_of_false"
            android:fontFamily="@font/etna"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/exit"
            android:textColor="@color/BlueText"
            android:textSize="52sp"/>
    </LinearLayout>
</RelativeLayout>