<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="375dp"
    android:layout_height="400dp"
    android:id="@+id/dialogEnd"
    android:background="@drawable/back_dialog"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/WhoWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textSize="35sp"
        android:fontFamily="@font/etna"/>
    <ImageView
        android:contentDescription="@string/icoWinner"
        android:id="@+id/icoWinner"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp">
        <Button
            style="@style/CardView"
            android:id="@+id/main_menu_dialog"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/blue55"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:padding="5dp"
            android:shadowDx="3"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:fontFamily="@font/etna"
            android:layout_marginEnd="10dp"/>
        <Button
            style="@style/CardView"
            android:id="@+id/dialog_continue"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/blue55"
            android:text="@string/Continue"
            android:padding="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:fontFamily="@font/etna"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>
