<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="375dp"
    android:layout_height="300dp"
    android:id="@+id/dialogEnd"
    android:background="@drawable/backgrount_twoplayer"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/WhoWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/BlueText"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:textSize="45sp"
        android:text="@string/settings"
        android:fontFamily="@font/etna"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="20dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/BlueLight"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="2"
                android:textSize="26sp"
                android:text="@string/sound_of_buutons"
                android:fontFamily="@font/etna"/>
            <Button
                style="@style/CardView"
                android:id="@+id/settings_SOB"
                android:layout_width="80dp"
                android:text="@string/ON"
                android:layout_height="35dp"
                android:background="@color/blue55"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:fontFamily="@font/etna"
                android:freezesText="true"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingStart="20dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/BlueLight"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="2"
                android:textSize="26sp"
                android:text="@string/sound_win_loss_fw"
                android:fontFamily="@font/etna"/>
            <Button
                android:id="@+id/settings_SWLF"
                style="@style/CardView"
                android:text="@string/ON"
                android:freezesText="true"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@color/blue55"
                android:layout_gravity="left"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:fontFamily="@font/etna"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="20dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/BlueLight"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="2"
                android:textSize="26sp"
                android:text="@string/language"
                android:fontFamily="@font/etna"/>
            <ImageView
                android:id="@+id/language"
                style="@style/CardView"
                android:src="@drawable/great_britain"
                android:freezesText="true"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:background="@color/blue55"
                android:layout_gravity="left"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:fontFamily="@font/etna"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
